align issue and some extra codes removed according to request

--- a/style.css
+++ b/style.css
@@ -1,42 +1,27 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.feature-single6 {
+.feature-single6-section {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 64px 165px;
     gap: 48px;
+    margin: 65px 165px;
 }
 
 .feature-details {
     display: flex;
-    flex-direction: row;
     align-items: center;
-    padding: 0px;
     gap: 30px;
 }
 
 .feature-title {
-    font-weight: 800;
     font-size: 40px;
-    line-height: 54px;
     font-family: 'Inter', sans-serif;
     width: 540px;
-    height: 108px;
-
 }
 
 .feature-text {
-    font-weight: 400;
     font-size: 18px;
     line-height: 32px;
     font-family: 'Inter', sans-serif;
     width: 540px;
-    height: 128px;
 }
 
 .feature-coverimg {
